syntax = "proto3";
import "google/protobuf/empty.proto";
import "game_state.proto";

option java_multiple_files = true;
option java_package = "fr.agrouagrou.proto";

package proto;

// SetGameState
message SetGameStateRequest {
  GameStateStatus status = 1;
}

message SetGameStateReply {
  GameStateStatus status = 1;
}

service Debug {
  rpc StartGame (google.protobuf.Empty) returns (google.protobuf.Empty) {}
  rpc SetGameState (SetGameStateRequest) returns (SetGameStateReply) {}
}
